infra/kube-manifest/ghostcms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:3.2-alpine # mysql:5.7 compatibility
        ports:
        - containerPort: 2368
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: ghost-content
        resources:
          limits:
            cpu: "250m"    # 250 milliCPU (0.25 CPU cores)
            memory: "512Mi"  # 512 Mebibytes (MiB) of memory
          requests:
            cpu: "100m"    # 100 milliCPU (0.1 CPU cores)
            memory: "256Mi"  # 256 Mebibytes (MiB) of memory
      volumes:
      - name: ghost-content
        persistentVolumeClaim:
          claimName: ghost-content-pvc
