infra/kube-manifest/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        # image: mysql:5.7
        image: mysql:8
        command: ["mysqld"]
        args: ["--ignore-db-dir=lost+found"]
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-pv
      volumes:
      - name: mysql-pv
        persistentVolumeClaim:
          claimName: mysql-pvc
